<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp">
        <TextView
            android:id="@+id/lblNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/lblNum"
            />
        <EditText
            android:id="@+id/txtNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number">
        </EditText>
        <TextView
            android:id="@+id/lblDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/lblDescripcion"
            />
        <EditText
            android:id="@+id/txtDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </EditText>
        <TextView
            android:id="@+id/lblPrecio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/lblPrecio"
            />
        <EditText
            android:id="@+id/txtPrecio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number">
        </EditText>
        <TextView
            android:id="@+id/lblPorcentaje"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/lblPorcentaje"
            />
        <EditText
            android:id="@+id/txtPorcentaje"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number">
        </EditText>
        <TextView
            android:id="@+id/lblPlazo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/lblPlazo"
            />
        <EditText
            android:id="@+id/txtPlazo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number">
        </EditText>
        <Button
            android:id="@+id/btnCotizacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Enviar informacion">
        </Button>
        <TextView
            android:id="@+id/lblDatos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            />
        <Button
            android:id="@+id/btnLimpiar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Limpiar datos" />
        <Button
            android:id="@+id/btnCerrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Cerrar" />
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>
